--- a/ee09_2019_czerwiec_4/dzialania.html
+++ b/ee09_2019_czerwiec_4/dzialania.html
@@ -52,8 +52,7 @@
     </div>
 
     <script>
-        function oblicz1()
-        {
+        function oblicz1(){
             var a = document.getElementById("a").value;
             var b = document.getElementById("b").value;
 
@@ -62,8 +61,7 @@
             document.getElementById("wynik").innerHTML="Wynik: "+wynik;
         }
 
-        function oblicz2()
-        {
+        function oblicz2(){
             var a = document.getElementById("a").value;
             var b = document.getElementById("b").value;
 
@@ -72,8 +70,7 @@
             document.getElementById("wynik").innerHTML="Wynik: "+wynik;
         }
 
-        function oblicz3()
-        {
+        function oblicz3(){
             var a = document.getElementById("a").value;
             var b = document.getElementById("b").value;
 
@@ -82,8 +79,7 @@
             document.getElementById("wynik").innerHTML="Wynik: "+wynik;
         }
 
-        function oblicz4()
-        {
+        function oblicz4(){
             var a = document.getElementById("a").value;
             var b = document.getElementById("b").value;
 
@@ -92,8 +88,7 @@
             document.getElementById("wynik").innerHTML="Wynik: "+wynik;
         }
 
-        function oblicz5()
-        {
+        function oblicz5(){
             var a = document.getElementById("a").value;
             var b = document.getElementById("b").value;
 
